--- a/project/music/src/style/reset.css
+++ b/project/music/src/style/reset.css
@@ -1,5 +1,4 @@
 @charset "utf-8";
-*{margin:0;padding:0;}
 img {border:none;}
 em,i{ font-style:normal;}
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, p, blockquote, th, td, font { padding: 0; margin: 0; font-family:"微软雅黑"; }
@@ -13,4 +12,4 @@ a:hover{color:#cd0200;text-decoration:underline}
 input[type="submit"],  input[type="reset"],  input[type="button"],  button {
     -webkit-appearance: none;
 }
-html,body{height:100%}
+html,body{height:100%;}
